--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 \DeclareMathOperator{\tr}{tr}
 
 \title{Probability Distributions (PRML \S2.3.1-2.3.7)}
-\date{PRML Reading Club (May 31, 2019)}
+\date{PRML Reading Club (June 3, 2019)}
 \author{Satoshi Murashige}
 \institute{Mathematical Informatics Lab., NAIST}
 
@@ -150,6 +150,13 @@
                     \item \S2.3.7 Students's t-distribution
                 \end{itemize}
         \end{itemize}
+    \end{frame}
+
+    \begin{frame}{}
+        \begin{center}
+            \includegraphics[height=4.5cm]{./figs/nara_genkai.png}
+            {\scriptsize \url{https://twitter.com/nara_genkai/status/1059076997060583426}}
+        \end{center}
     \end{frame}
     
     \section{\S2.3.1 Conditional Gaussian Distribution}
