--- a/main.tex
+++ b/main.tex
@@ -864,6 +864,12 @@
         \end{itemize}
     \end{frame}
     
+    \begin{frame}{Demonstration of a Bayes' theorem for Gaussian variables}
+        See Jupyter Notebook.
+
+        {\scriptsize\url{https://gist.github.com/eqs/a9f66d8a702da6ed7ff5a5b92aaa5811}}
+    \end{frame}
+    
     \section{\S2.3.4 Maximum likelihood for the Gaussian}
     
     \begin{frame}{Table of Contents}
@@ -1336,6 +1342,8 @@
     
     \begin{frame}{Demonstration of a Bayesian sequential estimation}
         See Jupyter Notebook.
+
+        {\scriptsize\url{https://gist.github.com/eqs/a9f66d8a702da6ed7ff5a5b92aaa5811}}
     \end{frame}
     
     \begin{frame}{The task of inferring the precision $\lambda \equiv 1/\sigma^2$ (the mean $\mu$ is known)}
